--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.shadow-inset {
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+.fc-toolbar-title{
+  font-size: 1rem !important;
+}
