add visit tome modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,36 @@ body {
 .fc-toolbar-title{
   font-size: 1rem !important;
 }
+
+
+/* For modal setup */
+.modal-wrapper {
+  width: 500px;
+  height: 600px;
+}
+
+/* Define the keyframes for the fade-in and fade-up animation */
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.modal-overlay {
+  position: absolute;
+  animation: fadeInUp 0.5s ease-out;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 50;
+}
